--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
             });
         }
     </script>
+    <style>
+        .t {
+            width: 40px;
+        }
+    </style>
     <title>Calculator</title>
 </head>
 <body onload="init()">
@@ -105,23 +110,23 @@
         </tr>
         <tr>
             <th><div id="v2">→</div></th>
-            <th><label for="l6"><input type="text" id="l6"></label></th>
-            <th><label for="l7"><input type="text" id="l7"></label></th>
-            <th><label for="l8"><input type="text" id="l8"></label></th>
+            <th><label for="l6"><input class="t" type="text" id="l6"></label></th>
+            <th><label for="l7"><input class="t" type="text" id="l7"></label></th>
+            <th><label for="l8"><input class="t" type="text" id="l8"></label></th>
             <th></th>
         </tr>
         <tr>
             <th><div id="v1">→</div></th>
-            <th><label for="l3"><input type="text" id="l3"></label></th>
-            <th><label for="l4"><input type="text" id="l4"></label></th>
-            <th><label for="l5"><input type="text" id="l5"></label></th>
+            <th><label for="l3"><input class="t" type="text" id="l3"></label></th>
+            <th><label for="l4"><input class="t" type="text" id="l4"></label></th>
+            <th><label for="l5"><input class="t" type="text" id="l5"></label></th>
             <th></th>
         </tr>
         <tr>
             <th><div id="v0">→</div></th>
-            <th><label for="l0"><input type="text" id="l0"></label></th>
-            <th><label for="l1"><input type="text" id="l1"></label></th>
-            <th><label for="l2"><input type="text" id="l2"></label></th>
+            <th><label for="l0"><input class="t" type="text" id="l0"></label></th>
+            <th><label for="l1"><input class="t" type="text" id="l1"></label></th>
+            <th><label for="l2"><input class="t" type="text" id="l2"></label></th>
             <th></th>
         </tr>
     </table>
