--- a/index.html
+++ b/index.html
@@ -100,6 +100,7 @@
     <title>Calculator</title>
 </head>
 <body onload="init()">
+    <h3>FF14 微彩工具</h3>
     <table>
         <tr>
             <th><div id="v3">↘</div></th>
