--- a/index.html
+++ b/index.html
@@ -6,16 +6,18 @@
     <script src="minilottery.js"></script>
     <script>
 
-        const error_enter = "请在1-4个格子内输入数字"
+        const error_enter = "请在1-4个格子内输入数字";
+        const error_range = "请输入1-9的数字";
+        const error_repeat = "请不要输入重复的数字"
         const cache = prevCache;
         const ls = [];
         const vs = []
 
         function init() {
-            for(let i = 0; i <= 8; i++) {
+            for (let i = 0; i <= 8; i++) {
                 ls.push(document.getElementById("l" + i));
             }
-            for(let i = 0; i <= 7; i++) {
+            for (let i = 0; i <= 7; i++) {
                 vs.push(document.getElementById("v" + i));
             }
             refresh();
@@ -24,22 +26,31 @@
         function reset() {
             ls.forEach(e => e.value = "");
         }
+
         async function submit() {
             refresh();
             const grid = [];
             let count = 0;
-            for(let i = 0; i <= 8; i++) {
+            for (let i = 0; i <= 8; i++) {
                 const e = document.getElementById("l" + i);
                 const t = e.value;
                 const v = parseInt(t);
-                if(isNaN(v)) {
+                if (isNaN(v)) {
                     grid.push(0);
                 } else {
+                    if (grid.includes(v)) {
+                        alert(error_repeat);
+                        return;
+                    }
+                    if (v <= 0 || v >= 9) {
+                        alert(error_range);
+                        return;
+                    }
                     grid.push(v);
-                    count ++;
+                    count++;
                 }
             }
-            if(count < 1 || count > 4) {
+            if (count < 1 || count > 4) {
                 alert(error_enter);
                 return;
             }
@@ -49,7 +60,7 @@
             calcResult.then((v) => {
                 document.getElementById("payout").textContent = v.outcome.toFixed(4);
 
-                if(v.tile) {
+                if (v.tile) {
                     document.getElementById("l" + v.tile).style.borderColor = "red";
                 } else {
                     document.getElementById("v" + v.vector).style.color = "red";
@@ -61,32 +72,33 @@
         }
 
         function downloadCache() {
-            function saveJSON(data, filename){
+            function saveJSON(data, filename) {
 
-                if(!data) {
+                if (!data) {
                     console.error('No data')
                     return;
                 }
 
-                if(!filename) filename = 'console.json'
+                if (!filename) filename = 'console.json'
 
-                if(typeof data === "object"){
+                if (typeof data === "object") {
                     data = JSON.stringify(data, undefined, 4)
                 }
 
                 const blob = new Blob([data], {type: 'text/json'}),
-                    e    = document.createEvent('MouseEvents'),
-                    a    = document.createElement('a')
+                    e = document.createEvent('MouseEvents'),
+                    a = document.createElement('a')
 
                 a.download = filename
                 a.href = window.URL.createObjectURL(blob)
-                a.dataset.downloadurl =  ['text/json', a.download, a.href].join(':')
+                a.dataset.downloadurl = ['text/json', a.download, a.href].join(':')
                 e.initMouseEvent('click', true, false, window, 0, 0, 0, 0, 0, false, false, false, false, 0, null)
                 a.dispatchEvent(e)
             }
 
             saveJSON(cache, "cache.JSON");
         }
+
         function refresh() {
             ls.forEach((e) => {
                 e.style.borderColor = "lightgray";
@@ -104,42 +116,62 @@
     <title>Calculator</title>
 </head>
 <body onload="init()">
-    <h3>FF14 微彩工具</h3>
-    <table>
-        <tr>
-            <th><div id="v3">↘</div></th>
-            <th><div id="v4">↓</div></th>
-            <th><div id="v5">↓</div></th>
-            <th><div id="v6">↓</div></th>
-            <th><div id="v7">↙</div></th>
-        </tr>
-        <tr>
-            <th><div id="v2">→</div></th>
-            <th><label for="l6"><input class="t" type="text" id="l6"></label></th>
-            <th><label for="l7"><input class="t" type="text" id="l7"></label></th>
-            <th><label for="l8"><input class="t" type="text" id="l8"></label></th>
-            <th></th>
-        </tr>
-        <tr>
-            <th><div id="v1">→</div></th>
-            <th><label for="l3"><input class="t" type="text" id="l3"></label></th>
-            <th><label for="l4"><input class="t" type="text" id="l4"></label></th>
-            <th><label for="l5"><input class="t" type="text" id="l5"></label></th>
-            <th></th>
-        </tr>
-        <tr>
-            <th><div id="v0">→</div></th>
-            <th><label for="l0"><input class="t" type="text" id="l0"></label></th>
-            <th><label for="l1"><input class="t" type="text" id="l1"></label></th>
-            <th><label for="l2"><input class="t" type="text" id="l2"></label></th>
-            <th></th>
-        </tr>
-    </table>
-    <input type="button" value="提交" id="submit" onclick="submit()">
-    <input type="button" value="清空" id="reset" onclick="reset()">
-    <br>
-    <div style="display: none">status: <div id="status" style="display: inline"></div></div>
-    <div>期待收益: <div id="payout" style="display: inline"></div></div>
-    <input type="button" value="download cache" onclick="downloadCache()" style="display: none">
+<h3>FF14 微彩工具</h3>
+<table>
+    <tr>
+        <th>
+            <div id="v3">↘</div>
+        </th>
+        <th>
+            <div id="v4">↓</div>
+        </th>
+        <th>
+            <div id="v5">↓</div>
+        </th>
+        <th>
+            <div id="v6">↓</div>
+        </th>
+        <th>
+            <div id="v7">↙</div>
+        </th>
+    </tr>
+    <tr>
+        <th>
+            <div id="v2">→</div>
+        </th>
+        <th><label for="l6"><input class="t" type="text" id="l6"></label></th>
+        <th><label for="l7"><input class="t" type="text" id="l7"></label></th>
+        <th><label for="l8"><input class="t" type="text" id="l8"></label></th>
+        <th></th>
+    </tr>
+    <tr>
+        <th>
+            <div id="v1">→</div>
+        </th>
+        <th><label for="l3"><input class="t" type="text" id="l3"></label></th>
+        <th><label for="l4"><input class="t" type="text" id="l4"></label></th>
+        <th><label for="l5"><input class="t" type="text" id="l5"></label></th>
+        <th></th>
+    </tr>
+    <tr>
+        <th>
+            <div id="v0">→</div>
+        </th>
+        <th><label for="l0"><input class="t" type="text" id="l0"></label></th>
+        <th><label for="l1"><input class="t" type="text" id="l1"></label></th>
+        <th><label for="l2"><input class="t" type="text" id="l2"></label></th>
+        <th></th>
+    </tr>
+</table>
+<input type="button" value="提交" id="submit" onclick="submit()">
+<input type="button" value="清空" id="reset" onclick="reset()">
+<br>
+<div style="display: none">status:
+    <div id="status" style="display: inline"></div>
+</div>
+<div>期待收益:
+    <div id="payout" style="display: inline"></div>
+</div>
+<input type="button" value="download cache" onclick="downloadCache()" style="display: none">
 </body>
 </html>
