Added bug report button

--- a/index.html
+++ b/index.html
@@ -173,5 +173,7 @@
     <div id="payout" style="display: inline"></div>
 </div>
 <input type="button" value="download cache" onclick="downloadCache()" style="display: none">
+<br>
+<a href="https://github.com/cookiesjuice/ft1/issues">报告bug</a>
 </body>
 </html>
