--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-759VJ1SM1T"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-759VJ1SM1T');
+    </script>
+
     <script src="cache.js"></script>
     <script src="minilottery.js"></script>
     <script>
