Refresh after reset

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 
         function reset() {
             ls.forEach(e => e.value = "");
+            refresh();
         }
 
         async function submit() {
