--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </script>
 
     <script src="model.js"></script>
-    <script src="minilottery.js"></script>
+    <script src="minicactpot.js"></script>
     <script>
         // Calculator
         const error_enter = "请在1-4个格子内输入数字";
